deployment/spring-boot-test-external-config-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-test-external-config
  name: spring-boot-test-external-config
  namespace: default
spec:
  clusterIP: 172.30.118.207
  clusterIPs:
  - 172.30.118.207
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-1
    port: 8080
  - name: port-2
    port: 8443
  selector:
    deployment: spring-boot-test-external-config
