deployment/spring-boot-test-external-config-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: spring-boot-test-external-config
  name: spring-boot-test-external-config
  namespace: default
spec:
  host: spring-boot-test-external-config-default.apps.cluster-cj69r.cj69r.sandbox1250.opentlc.com
  port:
    targetPort: port-1
  to:
    kind: Service
    name: spring-boot-test-external-config
    weight: 100
  wildcardPolicy: None
